--- a/NgImFormBootstrap/projects/ng-im-form/package.json
+++ b/NgImFormBootstrap/projects/ng-im-form/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ng-im-form",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^18.2.0",
-    "@angular/core": "^18.2.0"
+    "@angular/core": "^18.2.0",
+    "@fortawesome/fontawesome-free": ">=7.1.0",
+    "bootstrap": ">=5.3.8"
   },
   "dependencies": {
     "tslib": "^2.3.0"
