Renamed library project from 'ng-im-form' to 'ng-im-form-bootstrap'.

--- a/NgImFormBootstrap/projects/ng-im-form-bootstrap/package.json
+++ b/NgImFormBootstrap/projects/ng-im-form-bootstrap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-im-form",
+  "name": "ng-im-form-bootstrap",
   "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^18.2.0",
