--- a/NgImFormBootstrap/angular.json
+++ b/NgImFormBootstrap/angular.json
@@ -100,23 +100,23 @@
         }
       }
     },
-    "ng-im-form": {
+    "ng-im-form-bootstrap": {
       "projectType": "library",
-      "root": "projects/ng-im-form",
-      "sourceRoot": "projects/ng-im-form/src",
+      "root": "projects/ng-im-form-bootstrap",
+      "sourceRoot": "projects/ng-im-form-bootstrap/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/ng-im-form/ng-package.json"
+            "project": "projects/ng-im-form-bootstrap/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/ng-im-form/tsconfig.lib.prod.json"
+              "tsConfig": "projects/ng-im-form-bootstrap/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/ng-im-form/tsconfig.lib.json"
+              "tsConfig": "projects/ng-im-form-bootstrap/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -124,7 +124,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "tsConfig": "projects/ng-im-form/tsconfig.spec.json",
+            "tsConfig": "projects/ng-im-form-bootstrap/tsconfig.spec.json",
             "polyfills": ["zone.js", "zone.js/testing"]
           }
         }
