--- a/NgImFormBootstrap/projects/ng-im-form-bootstrap/package.json
+++ b/NgImFormBootstrap/projects/ng-im-form-bootstrap/package.json
@@ -1,6 +1,14 @@
 {
   "name": "ng-im-form-bootstrap",
   "version": "1.0.0",
+  "author": {
+    "name": "Irfat Mahmood Turkey"
+  },
+  "homepage": "https://irfatmahmoodturkey.github.io/ng-im-form-bootstrap-official-website/",
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/IrfatMahmoodTurkey/ng-im-form-bootstrap"
+  },
   "peerDependencies": {
     "@angular/common": "^18.2.0",
     "@angular/core": "^18.2.0",
